오류 수정 - 느낀점 필요