@@ -1,12 +1,9 @@
 package com.metacoding.springv2.domain.board;
 
-import lombok.Data;
-import com.metacoding.springv2.domain.user.User;
-import com.metacoding.springv2.domain.board.Board;
 import com.metacoding.springv2.domain.reply.Reply;
-import java.util.ArrayList;
+import lombok.Data;
+
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class BoardResponse {
     @Data
@@ -15,32 +12,33 @@ public class BoardResponse {
         private String title;
         private String content;
 
-        public DTO(Board board){
+        public DTO(Board board) {
             this.id = board.getId();
             this.title = board.getTitle();
             this.content = board.getContent();
         }
     }
+
     @Data
-    public static class DetailDTO{
+    public static class DetailDTO {
         private Integer boardId;
         private String title;
         private String content;
         private Integer userId;
         private String username;
         private Boolean isBoardOwner;
-        private List<ReplyDTO> replies = new ArrayList<>();
+        private List<ReplyDTO> replies;
 
-        public DetailDTO(Board board, Boolean isBoardOwner){
+        public DetailDTO(Board board, Integer sessionUserId) {
             this.boardId = board.getId();
             this.title = board.getTitle();
             this.content = board.getContent();
             this.userId = board.getUser().getId();
             this.username = board.getUser().getUsername();
-            this.isBoardOwner = isBoardOwner;
+            this.isBoardOwner = sessionUserId.equals(board.getUser().getId());
             this.replies = board.getReplies().stream()
-                .map(reply -> new ReplyDTO(reply))
-                .collect(Collectors.toList());
+                    .map(reply -> new ReplyDTO(reply, sessionUserId))
+                    .toList();
         }
 
         @Data
@@ -48,11 +46,13 @@ public class BoardResponse {
             private Integer id;
             private String username;
             private String comment;
+            private Boolean isOwner;
 
-            public ReplyDTO(Reply reply) {
+            public ReplyDTO(Reply reply, Integer sessionUserId) {
                 this.id = reply.getId();
                 this.username = reply.getUser().getUsername();
                 this.comment = reply.getComment();
+                this.isOwner = sessionUserId.equals(reply.getUser().getId());
             }
         }
 
